# Otech-Maman_Cours_Padlet

./: .env.example  .gitignore  README.md  docker-compose.yml  index.html  middleware.ts  package-lock.json  package.json  start-dev.ps1  tailwind.config.ts
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/admin/: page.tsx
assets/: api-client.js  app.js  styles.css
backend/: pyproject.toml
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: __init__.py  admin.py  auth.py  entities.py  files.py  search.py  transfers.py  users.py  workspace.py
backend/app/services/: __init__.py  accounts.py  audit.py  mail.py  storage.py  workspace.py
backend/migrations/: 001_initial_schema.sql  002_bootstrap_root.sql  003_bootstrap_rose.sql  004_make_password_change_optional.sql
backend/scripts/: bootstrap_rose.py  create_admin.py  migrate.py  scheduled_backups.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_deployment_contract.py  test_isolation.py  test_migration.py  test_migration_runner.py  test_root_bootstrap.py
components/: Breadcrumbs.tsx  Card.tsx  Header.tsx  ResourceList.tsx
docker/: backend-entrypoint.sh  backend.Dockerfile  frontend.Dockerfile  frontend.nginx.conf
docs/: API.md  ARCHITECTURE.md  AUDIT_INITIAL.md  OPERATIONS.md  PLAN_MIGRATION.md  SECURITY.md
lib/: auth.ts  data.ts  format.ts
nginx/: nginx.conf
prisma/: schema.prisma  seed.ts
scripts/: backup.sh  extract_frontend.py  postgres_backup_loop.sh  restore.sh  visual_regression.py
(+27 files in other folders)
