[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "monespaceprof-backend"
version = "1.0.0"
description = "API sécurisée multi-utilisateur de MonEspaceProf"
requires-python = ">=3.12"
dependencies = [
  "argon2-cffi>=23.1,<26",
  "fastapi>=0.116,<1",
  "pydantic-settings>=2.10,<3",
  "psycopg[binary]>=3.2,<4",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0.41,<3",
  "uvicorn[standard]>=0.35,<1"
]

[project.optional-dependencies]
test = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["E501", "S101", "S107"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
